tests/baselines/reference/intersectionAsWeakTypeSource.errors.txt
tests/cases/conformance/types/intersection/intersectionAsWeakTypeSource.ts(8,7): error TS2559: Type 'XY' has no properties in common with type 'Z'.
tests/cases/conformance/types/intersection/intersectionAsWeakTypeSource.ts(18,7): error TS2322: Type 'Brand<{ view: number; styleMedia: string; }>' is not assignable to type 'ViewStyle'.
  Property 'view' is missing in type 'Number & { __brand: { view: number; styleMedia: string; }; }'.


==== tests/cases/conformance/types/intersection/intersectionAsWeakTypeSource.ts (2 errors) ====
    interface X { x: string }
    interface Y { y: number }
    interface Z { z?: boolean }
    
    type XY = X & Y;
    const xy: XY = {x: 'x', y: 10};
    
    const z1: Z = xy; // error, {xy} doesn't overlap with {z}
          ~~
!!! error TS2559: Type 'XY' has no properties in common with type 'Z'.
    
    
    interface ViewStyle {
        view: number
        styleMedia: string
    }
    type Brand<T> = number & { __brand: T }
    declare function create<T extends { [s: string]: ViewStyle }>(styles: T): { [P in keyof T]: Brand<T[P]> };
    const wrapped = create({ first: { view: 0, styleMedia: "???" } });
    const vs: ViewStyle = wrapped.first // error, first is a branded number
          ~~
!!! error TS2322: Type 'Brand<{ view: number; styleMedia: string; }>' is not assignable to type 'ViewStyle'.
!!! error TS2322:   Property 'view' is missing in type 'Number & { __brand: { view: number; styleMedia: string; }; }'.
    